# network

./: .gitignore
client/: CMakeLists.txt  ftpclient.c  ftpclient.h
server/: CMakeLists.txt  ftpserver.c  ftpserver.h
